[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "larapy"
version = "0.2.0"
description = "A Python framework inspired by Laravel"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Larapy Team", email = "team@larapy.dev"}
]
maintainers = [
    {name = "Larapy Team", email = "team@larapy.dev"}
]
keywords = ["web", "framework", "laravel", "python", "mvc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "flask>=3.0.0",
    "jinja2>=3.1.0",
    "werkzeug>=3.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.urls]
Homepage = "https://github.com/yourusername/larapy-package"
Documentation = "https://github.com/yourusername/larapy-package#readme"
Repository = "https://github.com/yourusername/larapy-package.git"
"Bug Tracker" = "https://github.com/yourusername/larapy-package/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings",
    "flake8-import-order", 
    "mypy>=1.0.0",
    "pre-commit",
    "isort>=5.12.0",
]
lint = [
    "black>=23.0.0",
    "flake8>=6.0.0", 
    "flake8-docstrings",
    "flake8-import-order",
    "isort>=5.12.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
larapy = "larapy.console.cli:main"

[tool.setuptools]
packages = [
    "larapy",
    "larapy.console",
    "larapy.console.generators", 
    "larapy.middleware",
    "larapy.middleware.builtin",
    "larapy.database",
    "larapy.database.query",
    "larapy.database.schema", 
    "larapy.database.migrations",
    "larapy.security",
    "larapy.orm",
    "larapy.orm.relations",
    "larapy.config",
    "larapy.support",
    "larapy.core",
    "larapy.http", 
    "larapy.routing",
    "larapy.environment",
    "larapy.view",
    "larapy.view.components",
    "larapy.cache",
    "larapy.cache.drivers",
    "larapy.auth",
    "larapy.auth.providers",
    "larapy.auth.migrations",
    "larapy.auth.guards"
]
package-dir = {"larapy" = "."}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["larapy"]
known_third_party = ["click", "flask", "jinja2", "werkzeug"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]